--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -7,16 +7,16 @@ body {
   line-height: 1.7em;
 }
 h1, h2, h3, h4 { color: #4B4B4B; }
-a { color: #3f98b5; }
+a { color: #176DB5; }
 h1 { font-size: 2em; }
 h2 { font-size: 1.5em; }
 h3 { font-size: 1.35em; }
 
 /* Header */
-#top-header { border-bottom: 2px solid #3f98b5; background-color: #fff; }
-#top-header #primary-nav ul li.current_page_item a { background-color: #3f98b5; color: #FFF; }
-#top-header #primary-nav ul li a { color: #3f98b5; }
-#top-header #primary-nav ul li a:hover { background-color: #ddd; }
+#top-header { border-bottom: 2px solid #DEB406; background-color: #104B7D; }
+#top-header #primary-nav ul li.current_page_item a { background-color: #DEB406; color: #FFF; }
+#top-header #primary-nav ul li a { color: #DEB406; }
+#top-header #primary-nav ul li a:hover { background-color: #2A6698; }
 #about-subscribe { background-color: #EAEAEA; }
 #about-subscribe h2 { color: #6B6B6B; }
 #headline { background: #3f98b5; }
@@ -38,33 +38,33 @@ h3 { font-size: 1.35em; }
 }
 .read-more {
   background-color: #EAEAEA;
-  color: #3f98b5;
+  color: #176DB5;
 }
 .read-more:hover {
-  background-color: #3f98b5;
+  background-color: #176DB5;
   color: #FFF;
 }
 
 /* Footer */
-footer #top-footer { background-color: #3f98b5; color: #FFF; }
+footer #top-footer { background-color: #104B7D; color: #FFF; }
 footer #top-footer #social-icons li a, #top-footer h3, #top-footer a { color: #FFF; }
-footer #top-footer #social-icons li a:hover { color: #1f5964; }
+footer #top-footer #social-icons li a:hover { color: #DEB406; }
 footer #bottom-footer { background-color: #27282C; color: #FFF; }
 
 /* Buttons */
 #scroll-top a:hover,
 input[type="submit"],
 #comments .comment-reply-link {
-  background-color: #3f98b5;
+  background-color: #176DB5;
   color: #FFF;
 }
 input[type="submit"]:hover,
 #comments .comment-reply-link:hover {
-  background-color: #177c90;
+  background-color: #104B7D;
 }
 
 /* Scroll to top */
-#scroll-top a { background: #177c90; }
-#scroll-top a:hover { background-color: #20819a; }
+#scroll-top a { background: #176DB5; }
+#scroll-top a:hover { background-color: #2A6698; }
 #scroll-top a i { color: #FFF; }
 #scroll-top a:hover i { color: #FFF; }
