--- a/assets/stylus/areas/footer.styl
+++ b/assets/stylus/areas/footer.styl
@@ -1,7 +1,6 @@
 footer
   #bottom-footer
     background-color #27282C
-    background-color default-color
   #top-footer
     background-color default-color 
     color #FFF 
@@ -12,5 +11,5 @@ footer
         a
           background-color default-color
           &:hover
-            color #1f5964 
+            color secondary-color
           
