--- a/assets/stylus/areas/buttons.styl
+++ b/assets/stylus/areas/buttons.styl
@@ -3,17 +3,8 @@
     background-color default-color
     color #FFF
     &:hover
-      background-color: #177c90
+      background-color #177c90
   a
     &:hover
-      background-color: default-color
+      background-color default-color
       color: #FFF
-
-#comments
-  .comment-reply-link
-    background-color default-color
-    color #FFF
-    &:hover
-      background-color: #177c90
-
-
