--- a/assets/stylus/areas/header.styl
+++ b/assets/stylus/areas/header.styl
@@ -1,19 +1,23 @@
 #top-header
   border-bottom 2px solid default-color
-  background-color #fff 
+  if bg-top is defined
+    background url(bg-top) repeat
+  else
+    background-color #fff 
   #primary-nav
     ul
       li
-        &.current_page_item
-          background-color default-color 
-          color #FFF 
+        background-color default-color 
+        border-radius 5px
+        transition .2s all
         a
-          color default-color
-          &:hover
-            background-color #ddd 
+          color #fff
+        &:hover
+          background-color secondary-color 
+            
 
 #about-subscribe
-  background-color content-color           
+  background-color #fff
   h2
     color content-text-color
 
@@ -23,8 +27,9 @@
     color #FFF 
     font-size 1.5em
 
-
 .blog-post
+  h1
+    color secondary-color
   .post-meta
     color #AAA
     h3
