--- a/assets/stylus/areas/post.styl
+++ b/assets/stylus/areas/post.styl
@@ -1,13 +1,12 @@
 .post-date
-  background: #eaeaea
+  background #eaeaea
   background-linear-gradient(-45deg, #eaeaea, 0%, #eaeaea, 50%, left top, left bottom)
-  color: content-text-color
+  color content-text-color
 
 .read-more 
-  background-color: #EAEAEA
-  color: default-color
+  background-color #EAEAEA
+  color default-color
 
 .read-more:hover 
   background-color: default-color
-  color: #FFF
-
+  color #FFF
