--- a/assets/stylus/variables.styl
+++ b/assets/stylus/variables.styl
@@ -1,5 +1,6 @@
-default-color = #3f98b5
-secondary-color = #3f98b5
+default-color = #1C5083
 text-color = #4B4B4B
 content-color = #8ba8c4
 content-text-color = #6B6B6B
+secondary-color = #F06E00
+bg-top = '../images/bg_construir.png'
