--- a/assets/stylus/areas/header.styl
+++ b/assets/stylus/areas/header.styl
@@ -1,9 +1,9 @@
 #top-header
-  border-bottom 2px solid default-color
+  border-bottom 10px solid secondary-color
   if bg-top is defined
     background url(bg-top) repeat
   else
-    background-color #fff 
+    background-color default-color 
   #primary-nav
     ul
       li
