--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -58,17 +58,25 @@ h3 {
 .blog-post .post-meta h3 a {
   color: #517e93;
 }
+.blog-post .social {
+  top: 225px;
+  margin-left: -115px;
+}
 .post-date {
   background: #eaeaea;
   color: #6b6b6b;
 }
 .read-more {
-  background-color: #eaeaea;
-  color: #1c5083;
-}
-.read-more:hover {
   background-color: #1c5083;
   color: #fff;
+  -webkit-transition: 0.2s all;
+  -moz-transition: 0.2s all;
+  -o-transition: 0.2s all;
+  -ms-transition: 0.2s all;
+  transition: 0.2s all;
+}
+.read-more:hover {
+  background-color: #f06e00;
 }
 footer #bottom-footer {
   background-color: #27282c;
