added stylus syntax

--- a/assets/stylus/areas/post.styl
+++ b/assets/stylus/areas/post.styl
@@ -4,10 +4,8 @@
   color content-text-color
 
 .read-more 
-  background-color #EAEAEA
-  color default-color
-
-.read-more:hover 
-  background-color: default-color
-  color #FFF
-
+  background-color default-color
+  color #fff
+  transition .2s all
+  &:hover
+    background-color secondary-color
