--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -5,7 +5,7 @@ h4 {
   color: #4b4b4b;
 }
 a {
-  color: #f06e00;
+  color: #0088cc;
 }
 h1 {
   font-size: 2em;
@@ -17,11 +17,11 @@ h3 {
   font-size: 1.35em;
 }
 #top-header {
-  border-bottom: 2px solid #1c5083;
+  border-bottom: 2px solid #0088cc;
   background: url("../images/bg_construir.png") repeat;
 }
 #top-header #primary-nav ul li {
-  background-color: #1c5083;
+  background-color: #0088cc;
   -webkit-transition: 0.2s all;
   -moz-transition: 0.2s all;
   -o-transition: 0.2s all;
@@ -32,7 +32,7 @@ h3 {
   color: #fff;
 }
 #top-header #primary-nav ul li:hover {
-  background-color: #f06e00;
+  background-color: #006FA7;
 }
 #top-header #primary-nav ul li:hover ul {
   display: block;
@@ -47,10 +47,10 @@ h3 {
   display: none;
 }
 #about-subscribe {
-  background-color: #fff;
+  background-color: #92CDE5;
 }
 #about-subscribe h2 {
-  color: #6b6b6b;
+  color: #fff;
 }
 #headline {
   background: #1c5083;
@@ -60,7 +60,7 @@ h3 {
   font-size: 1.5em;
 }
 .blog-post h1 {
-  color: #f06e00;
+  color: #888;
 }
 .blog-post .post-meta {
   color: #aaa;
@@ -77,7 +77,7 @@ h3 {
   color: #6b6b6b;
 }
 .read-more {
-  background-color: #1c5083;
+  background-color: #0088cc;
   color: #fff;
   -webkit-transition: 0.2s all;
   -moz-transition: 0.2s all;
@@ -86,13 +86,13 @@ h3 {
   transition: 0.2s all;
 }
 .read-more:hover {
-  background-color: #f06e00;
+  background-color: #006FA7;
 }
 footer #bottom-footer {
   background-color: #27282c;
 }
 footer #top-footer {
-  background-color: #1c5083;
+  background-color: #049FBD;
   color: #fff;
 }
 footer #top-footer h3,
@@ -100,10 +100,10 @@ footer #top-footer a {
   color: #fff;
 }
 footer #top-footer #social-icons li a {
-  background-color: #1c5083;
+  /*background-color: #1c5083;*/
 }
 footer #top-footer #social-icons li a:hover {
-  color: #f06e00;
+  color: #faa732;
 }
 #scroll-top input[type="submit"] {
   background-color: #1c5083;
@@ -117,18 +117,18 @@ footer #top-footer #social-icons li a:hover {
   color: #fff;
 }
 #comments .comment-form input[type="submit"] {
-  background-color: #1c5083;
+  background-color: #0088cc;
   color: #fff;
 }
 #comments .comment-form input[type="submit"]:hover {
-  background-color: #f06e00;
+  background-color: #006FA7;
 }
 #comments .comment-reply-link {
-  background-color: #1c5083;
+  background-color: #0088cc;
   color: #fff;
 }
 #comments .comment-reply-link:hover {
-  background-color: #f06e00;
+  background-color: #006FA7;
 }
 body {
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
@@ -138,21 +138,21 @@ body {
 }
 /* Scroll to top */
 #scroll-top a {
-  background: #f06e00;
+  background: #faa732;
 }
 #scroll-top a i {
   color: #fff;
 }
 #scroll-top a:hover {
-  background-color: #20819a;
+  background-color: #D68718;
 }
 #scroll-top a:hover i {
   color: #fff;
 }
 input[type="submit"] {
-  background-color: #1c5083;
+  background-color: #0088cc;
   color: #fff;
 }
 input[type="submit"]:hover {
-  background-color: #f06e00;
+  background-color: #006FA7;
 }
