--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -5,7 +5,7 @@ h4 {
   color: #4b4b4b;
 }
 a {
-  color: #E2001A;
+  color: #ff0000;
 }
 h1 {
   font-size: 2em;
@@ -104,7 +104,7 @@ footer #top-footer a {
   color: #fff;
 }
 footer #top-footer #social-icons li a:hover {
-  color: #E2001A;
+  color: #ff0000;
 }
 #scroll-top input[type="submit"] {
   background-color: #1c5083;
@@ -118,14 +118,14 @@ footer #top-footer #social-icons li a:hover {
   color: #fff;
 }
 #comments .comment-form input[type="submit"] {
-  background-color: #E2001A;
+  background-color: #ff0000;
   color: #fff;
 }
 #comments .comment-form input[type="submit"]:hover {
   background-color: #AF0917;
 }
 #comments .comment-reply-link {
-  background-color: #E2001A;
+  background-color: #ff0000;
   color: #fff;
 }
 #comments .comment-reply-link:hover {
@@ -139,7 +139,7 @@ body {
 }
 /* Scroll to top */
 #scroll-top a {
-  background: #E2001A;
+  background: #ff0000;
 }
 #scroll-top a i {
   color: #fff;
