--- a/assets/stylus/index.styl
+++ b/assets/stylus/index.styl
@@ -16,11 +16,12 @@ body
 /* Scroll to top */
 #scroll-top 
   a  
-    background secondary-color
+    border 1px solid #000
+    background-color default-color-color 
     i
-      color #FFF
+      color #000
     &:hover
-      background-color #20819a 
+      background-color #000 !important
       i
         color: #FFF 
         
