--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,3 +1,6 @@
+body {
+  background: #FDFDFD;
+}
 h1,
 h2,
 h3,
@@ -5,7 +8,7 @@ h4 {
   color: #4b4b4b;
 }
 a {
-  color: #f06e00;
+  color: #25809a;
 }
 h1 {
   font-size: 2em;
@@ -17,11 +20,15 @@ h3 {
   font-size: 1.35em;
 }
 #top-header {
-  border-bottom: 2px solid #1c5083;
-  background: url("../images/bg_construir.png") repeat;
+  background-color: #FFFFFF;
+}
+#top-header .container {
+  padding: 0;
+}
+#top-header #primary-nav {
+  padding: 93px 0;
 }
 #top-header #primary-nav ul li {
-  background-color: #1c5083;
   -webkit-transition: 0.2s all;
   -moz-transition: 0.2s all;
   -o-transition: 0.2s all;
@@ -29,17 +36,18 @@ h3 {
   transition: 0.2s all;
 }
 #top-header #primary-nav ul li a {
+  background-color: #25809a;
   color: #fff;
 }
-#top-header #primary-nav ul li:hover {
-  background-color: #f06e00;
+#top-header #primary-nav ul li a:hover {
+  background-color: #25809a;
 }
-#top-header #primary-nav ul li:hover ul {
+#top-header #primary-nav ul li a:hover ul {
   display: block;
   position: absolute;
   border-top: 1px solid #8ba8c4;
 }
-#top-header #primary-nav ul li:hover ul li {
+#top-header #primary-nav ul li a:hover ul li {
   display: block;
   text-align: left;
 }
@@ -47,20 +55,22 @@ h3 {
   display: none;
 }
 #about-subscribe {
-  background-color: #fff;
+  background-color: #f9bc1b;
 }
 #about-subscribe h2 {
-  color: #6b6b6b;
+  color: #FFFFFF;
+  font-weight: bold;
+  text-transform: uppercase;
 }
 #headline {
-  background: #1c5083;
+  background: #25809a;
 }
 #headline h3 {
   color: #fff;
   font-size: 1.5em;
 }
 .blog-post h1 {
-  color: #f06e00;
+  color: #25809a;
 }
 .blog-post .post-meta {
   color: #aaa;
@@ -77,7 +87,7 @@ h3 {
   color: #6b6b6b;
 }
 .read-more {
-  background-color: #1c5083;
+  background-color: #25809a;
   color: #fff;
   -webkit-transition: 0.2s all;
   -moz-transition: 0.2s all;
@@ -86,13 +96,14 @@ h3 {
   transition: 0.2s all;
 }
 .read-more:hover {
-  background-color: #f06e00;
+  background-color: #25809a;
 }
 footer #bottom-footer {
   background-color: #27282c;
+  color: #FFFFFF;
 }
 footer #top-footer {
-  background-color: #1c5083;
+  background-color: #f9bc1b;
   color: #fff;
 }
 footer #top-footer h3,
@@ -100,35 +111,35 @@ footer #top-footer a {
   color: #fff;
 }
 footer #top-footer #social-icons li a {
-  background-color: #1c5083;
+  background-color: #f9bc1b;
 }
 footer #top-footer #social-icons li a:hover {
-  color: #f06e00;
+  color: #25809a;
 }
 #scroll-top input[type="submit"] {
-  background-color: #1c5083;
+  background-color: #25809a;
   color: #fff;
 }
 #scroll-top input[type="submit"]:hover {
   background-color: #177c90;
 }
 #scroll-top a:hover {
-  background-color: #1c5083;
+  background-color: #25809a;
   color: #fff;
 }
 #comments .comment-form input[type="submit"] {
-  background-color: #1c5083;
+  background-color: #25809a;
   color: #fff;
 }
 #comments .comment-form input[type="submit"]:hover {
-  background-color: #f06e00;
+  background-color: #25809a;
 }
 #comments .comment-reply-link {
-  background-color: #1c5083;
+  background-color: #25809a;
   color: #fff;
 }
 #comments .comment-reply-link:hover {
-  background-color: #f06e00;
+  background-color: #25809a;
 }
 body {
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
@@ -138,21 +149,21 @@ body {
 }
 /* Scroll to top */
 #scroll-top a {
-  background: #f06e00;
+  background: #25809a;
 }
 #scroll-top a i {
   color: #fff;
 }
 #scroll-top a:hover {
-  background-color: #20819a;
+  background-color: #1C5E71;
 }
 #scroll-top a:hover i {
   color: #fff;
 }
 input[type="submit"] {
-  background-color: #1c5083;
+  background-color: #25809a;
   color: #fff;
 }
 input[type="submit"]:hover {
-  background-color: #f06e00;
+  background-color: #25809a;
 }
