--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -18,28 +18,25 @@ h3 {
 }
 #top-header {
   border-bottom: 2px solid #1c5083;
-  background: url("../images/bg_construir.png") repeat;
 }
-#top-header #primary-nav ul li {
+#top-header #primary-nav ul li a {
   background-color: #1c5083;
+  color: #fff;
   -webkit-transition: 0.2s all;
   -moz-transition: 0.2s all;
   -o-transition: 0.2s all;
   -ms-transition: 0.2s all;
   transition: 0.2s all;
-}
-#top-header #primary-nav ul li a {
-  color: #fff;
-}
-#top-header #primary-nav ul li:hover {
+} 
+#top-header #primary-nav ul li a:hover {
   background-color: #f06e00;
 }
-#top-header #primary-nav ul li:hover ul {
+#top-header #primary-nav ul li a:hover ul {
   display: block;
   position: absolute;
   border-top: 1px solid #8ba8c4;
 }
-#top-header #primary-nav ul li:hover ul li {
+#top-header #primary-nav ul li a:hover ul li {
   display: block;
   text-align: left;
 }
