--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -2,10 +2,10 @@ h1,
 h2,
 h3,
 h4 {
-  color: #4b4b4b;
+  color: #666;
 }
 a {
-  color: #f06e00;
+  color: #3ab34a;
 }
 h1 {
   font-size: 2em;
@@ -17,19 +17,22 @@ h3 {
   font-size: 1.35em;
 }
 #top-header {
-  border-bottom: 2px solid #1c5083;
+  border-bottom: 2px solid #4f2657;
+}
+#top-header #primary-nav ul li {
+  margin-top: 20px;
 }
 #top-header #primary-nav ul li a {
-  background-color: #1c5083;
+  background-color: #3ab34a;
   color: #fff;
   -webkit-transition: 0.2s all;
   -moz-transition: 0.2s all;
   -o-transition: 0.2s all;
   -ms-transition: 0.2s all;
   transition: 0.2s all;
-} 
+}
 #top-header #primary-nav ul li a:hover {
-  background-color: #f06e00;
+  background-color: #2a9838;
 }
 #top-header #primary-nav ul li a:hover ul {
   display: block;
@@ -43,22 +46,26 @@ h3 {
 #top-header #primary-nav ul li ul {
   display: none;
 }
+#top-header .container {
+    padding: 24px 0;
+}
 #about-subscribe {
-  background-color: #fff;
+  background-color: #4f2657;
 }
 #about-subscribe h2 {
-  color: #6b6b6b;
+  color: #fff;
 }
 #headline {
-  background: #1c5083;
+  background: #4f2657;
 }
 #headline h3 {
   color: #fff;
   font-size: 1.5em;
 }
-.blog-post h1 {
-  color: #f06e00;
+.blog-post h1 a {
+  color: #666;
 }
+
 .blog-post .post-meta {
   color: #aaa;
 }
@@ -74,8 +81,8 @@ h3 {
   color: #6b6b6b;
 }
 .read-more {
-  background-color: #1c5083;
-  color: #fff;
+  background-color: #f0f0f0;
+  color: #3ab34a;
   -webkit-transition: 0.2s all;
   -moz-transition: 0.2s all;
   -o-transition: 0.2s all;
@@ -83,13 +90,15 @@ h3 {
   transition: 0.2s all;
 }
 .read-more:hover {
-  background-color: #f06e00;
+  background-color: #3ab34a;
+  color: #fff;
 }
 footer #bottom-footer {
-  background-color: #27282c;
+  background-color: #3ab34a;
+  color: #4f2657;
 }
 footer #top-footer {
-  background-color: #1c5083;
+  background-color: #4f2657;
   color: #fff;
 }
 footer #top-footer h3,
@@ -97,10 +106,10 @@ footer #top-footer a {
   color: #fff;
 }
 footer #top-footer #social-icons li a {
-  background-color: #1c5083;
+  background-color: #4f2657;
 }
 footer #top-footer #social-icons li a:hover {
-  color: #f06e00;
+  color: #3ab34a;
 }
 #scroll-top input[type="submit"] {
   background-color: #1c5083;
@@ -114,18 +123,18 @@ footer #top-footer #social-icons li a:hover {
   color: #fff;
 }
 #comments .comment-form input[type="submit"] {
-  background-color: #1c5083;
+  background-color: #3ab34a;
   color: #fff;
 }
 #comments .comment-form input[type="submit"]:hover {
-  background-color: #f06e00;
+  background-color: #2a9838;
 }
 #comments .comment-reply-link {
-  background-color: #1c5083;
+  background-color: #3ab34a;
   color: #fff;
 }
 #comments .comment-reply-link:hover {
-  background-color: #f06e00;
+  background-color: #2a9838;
 }
 body {
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
@@ -135,21 +144,21 @@ body {
 }
 /* Scroll to top */
 #scroll-top a {
-  background: #f06e00;
+  background: #2a9838;
 }
 #scroll-top a i {
   color: #fff;
 }
 #scroll-top a:hover {
-  background-color: #20819a;
+  background-color: #248430;
 }
 #scroll-top a:hover i {
   color: #fff;
 }
 input[type="submit"] {
-  background-color: #1c5083;
+  background-color: #3ab34a;
   color: #fff;
 }
 input[type="submit"]:hover {
-  background-color: #f06e00;
+  background-color: #2a9838;
 }
