--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -2,10 +2,10 @@ h1,
 h2,
 h3,
 h4 {
-  color: #4b4b4b;
+  color: #71143f;
 }
 a {
-  color: #5b9181;
+  color: #d1618c;
 }
 h1 {
   font-size: 2em;
@@ -17,11 +17,11 @@ h3 {
   font-size: 1.35em;
 }
 #top-header {
-  border-bottom: 2px solid #38594f;
+  border-bottom: 2px solid #d1618c;
   background: url("../images/bg_construir.png") repeat;
 }
 #top-header #primary-nav ul li {
-  background-color: #38594f;
+  background-color: #d1618c;
   -webkit-transition: 0.2s all;
   -moz-transition: 0.2s all;
   -o-transition: 0.2s all;
@@ -35,12 +35,12 @@ h3 {
   color: #fff;
 }
 #top-header #primary-nav ul li:hover {
-  background-color: #5b9181;
+  background-color: #d1618c;
 }
 #top-header #primary-nav ul li:hover ul {
   display: block;
   position: absolute;
-  border-top: 1px solid #8ba8c4;
+  border-top: 1px solid #d1618c;
 }
 #top-header #primary-nav ul li:hover ul li {
   display: block;
@@ -53,14 +53,14 @@ h3 {
   color: #6b6b6b;
 }
 #headline {
-  background: #38594f;
+  background: #d1618c;
 }
 #headline h3 {
   color: #fff;
   font-size: 1.5em;
 }
 .blog-post h1 {
-  color: #5b9181;
+  color: #d1618c;
 }
 .blog-post .post-meta {
   color: #aaa;
@@ -77,7 +77,7 @@ h3 {
   color: #6b6b6b;
 }
 .read-more {
-  background-color: #38594f;
+  background-color: #d1618c;
   color: #fff;
   -webkit-transition: 0.2s all;
   -moz-transition: 0.2s all;
@@ -86,13 +86,13 @@ h3 {
   transition: 0.2s all;
 }
 .read-more:hover {
-  background-color: #5b9181;
+  background-color: #d1618c;
 }
 footer #bottom-footer {
   background-color: #27282c;
 }
 footer #top-footer {
-  background-color: #38594f;
+  background-color: #d1618c;
   color: #fff;
 }
 footer #top-footer h3,
@@ -100,35 +100,35 @@ footer #top-footer a {
   color: #fff;
 }
 footer #top-footer #social-icons li a {
-  background-color: #38594f;
+  background-color: #d1618c;
 }
 footer #top-footer #social-icons li a:hover {
-  color: #5b9181;
+  color: #d1618c;
 }
 #scroll-top input[type="submit"] {
-  background-color: #38594f;
+  background-color: #d1618c;
   color: #fff;
 }
 #scroll-top input[type="submit"]:hover {
   background-color: #177c90;
 }
 #scroll-top a:hover {
-  background-color: #38594f;
+  background-color: #d1618c;
   color: #fff;
 }
 #comments .comment-form input[type="submit"] {
-  background-color: #38594f;
+  background-color: #d1618c;
   color: #fff;
 }
 #comments .comment-form input[type="submit"]:hover {
-  background-color: #5b9181;
+  background-color: #d1618c;
 }
 #comments .comment-reply-link {
-  background-color: #38594f;
+  background-color: #d1618c;
   color: #fff;
 }
 #comments .comment-reply-link:hover {
-  background-color: #5b9181;
+  background-color: #d1618c;
 }
 body {
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
@@ -138,7 +138,7 @@ body {
 }
 /* Scroll to top */
 #scroll-top a {
-  background: #5b9181;
+  background: #d1618c;
 }
 #scroll-top a i {
   color: #fff;
@@ -150,9 +150,9 @@ body {
   color: #fff;
 }
 input[type="submit"] {
-  background-color: #38594f;
+  background-color: #d1618c;
   color: #fff;
 }
 input[type="submit"]:hover {
-  background-color: #5b9181;
+  background-color: #d1618c;
 }
