--- a/assets/stylus/variables.styl
+++ b/assets/stylus/variables.styl
@@ -1,6 +1,6 @@
-default-color = #38594F
-text-color = #4B4B4B
-content-color = #8ba8c4
+default-color = #d1618c
+text-color = #71143f
+content-color = #d1618c
 content-text-color = #6B6B6B
-secondary-color = lighten(#38594F,25%)
+secondary-color =  #d1618c
 bg-top = '../images/bg_construir.png'
