--- a/assets/stylus/variables.styl
+++ b/assets/stylus/variables.styl
@@ -1,6 +1,6 @@
-default-color = #1C5083
-text-color = #4B4B4B
-content-color = #8ba8c4
-content-text-color = #6B6B6B
-secondary-color = #F06E00
+default-color = #7F000B
+Text-color = #6D6E70
+content-color = #7F000B
+content-text-color = #7F000B
+secondary-color = #B2333E
 bg-top = '../images/bg_construir.png'
