--- a/assets/stylus/variables.styl
+++ b/assets/stylus/variables.styl
@@ -1,6 +1,6 @@
-default-color = #1C5083
+default-color = #3E4095
 text-color = #4B4B4B
-content-color = #8ba8c4
-content-text-color = #6B6B6B
-secondary-color = #F06E00
+content-color = #3E4095
+content-text-color = #3E4095
+secondary-color = lighten(#3E4095,25%)
 bg-top = '../images/bg_construir.png'
