--- a/assets/stylus/index.styl
+++ b/assets/stylus/index.styl
@@ -52,3 +52,14 @@ input[type="submit"]
   background-color input-default-color
   &:hover
     background-color input-secondary-color
+
+#comments .comment .comment-meta
+  background-color transparent
+  border 0
+
+.white-container blockquote
+  background-color darken(page-background-color,25%)
+  border-left 10px solid secondary-color
+
+blockquote:before
+  color secondary-color
