Seguem as alteracoes do cliente

--- a/assets/stylus/variables.styl
+++ b/assets/stylus/variables.styl
@@ -1,6 +1,6 @@
-default-color = #3E4095
+default-color = #043363
 text-color = #4B4B4B
 content-color = #3E4095
 content-text-color = #3E4095
-secondary-color = lighten(#3E4095,25%)
+secondary-color = lighten(#043363,15%)
 bg-top = '../images/bg_construir.png'
