--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -5,7 +5,7 @@ h4 {
   color: #4b4b4b;
 }
 a {
-  color: #6163bd;
+  color: #06519e;
 }
 h1 {
   font-size: 2em;
@@ -17,11 +17,11 @@ h3 {
   font-size: 1.35em;
 }
 #top-header {
-  border-bottom: 2px solid #3e4095;
+  border-bottom: 2px solid #043363;
   background: url("../images/bg_construir.png") repeat;
 }
 #top-header #primary-nav ul li {
-  background-color: #3e4095;
+  background-color: #043363;
   -webkit-transition: 0.2s all;
   -moz-transition: 0.2s all;
   -o-transition: 0.2s all;
@@ -35,7 +35,7 @@ h3 {
   color: #fff;
 }
 #top-header #primary-nav ul li:hover {
-  background-color: #6163bd;
+  background-color: #06519e;
 }
 #top-header #primary-nav ul li:hover ul {
   display: block;
@@ -53,14 +53,14 @@ h3 {
   color: #3e4095;
 }
 #headline {
-  background: #3e4095;
+  background: #043363;
 }
 #headline h3 {
   color: #fff;
   font-size: 1.5em;
 }
 .blog-post h1 {
-  color: #6163bd;
+  color: #06519e;
 }
 .blog-post .post-meta {
   color: #aaa;
@@ -77,7 +77,7 @@ h3 {
   color: #3e4095;
 }
 .read-more {
-  background-color: #3e4095;
+  background-color: #043363;
   color: #fff;
   -webkit-transition: 0.2s all;
   -moz-transition: 0.2s all;
@@ -86,13 +86,13 @@ h3 {
   transition: 0.2s all;
 }
 .read-more:hover {
-  background-color: #6163bd;
+  background-color: #06519e;
 }
 footer #bottom-footer {
   background-color: #27282c;
 }
 footer #top-footer {
-  background-color: #3e4095;
+  background-color: #043363;
   color: #fff;
 }
 footer #top-footer h3,
@@ -100,35 +100,35 @@ footer #top-footer a {
   color: #fff;
 }
 footer #top-footer #social-icons li a {
-  background-color: #3e4095;
+  background-color: #043363;
 }
 footer #top-footer #social-icons li a:hover {
-  color: #6163bd;
+  color: #06519e;
 }
 #scroll-top input[type="submit"] {
-  background-color: #3e4095;
+  background-color: #043363;
   color: #fff;
 }
 #scroll-top input[type="submit"]:hover {
   background-color: #177c90;
 }
 #scroll-top a:hover {
-  background-color: #3e4095;
+  background-color: #043363;
   color: #fff;
 }
 #comments .comment-form input[type="submit"] {
-  background-color: #3e4095;
+  background-color: #043363;
   color: #fff;
 }
 #comments .comment-form input[type="submit"]:hover {
-  background-color: #6163bd;
+  background-color: #06519e;
 }
 #comments .comment-reply-link {
-  background-color: #3e4095;
+  background-color: #043363;
   color: #fff;
 }
 #comments .comment-reply-link:hover {
-  background-color: #6163bd;
+  background-color: #06519e;
 }
 body {
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
@@ -138,7 +138,7 @@ body {
 }
 /* Scroll to top */
 #scroll-top a {
-  background: #6163bd;
+  background: #06519e;
 }
 #scroll-top a i {
   color: #fff;
@@ -150,9 +150,9 @@ body {
   color: #fff;
 }
 input[type="submit"] {
-  background-color: #3e4095;
+  background-color: #043363;
   color: #fff;
 }
 input[type="submit"]:hover {
-  background-color: #6163bd;
+  background-color: #06519e;
 }
