Add engecass colors and logo

--- a/assets/stylus/variables.styl
+++ b/assets/stylus/variables.styl
@@ -1,6 +1,6 @@
-default-color = #1C5083
+default-color = #1D70B7
 text-color = #4B4B4B
-content-color = #8ba8c4
-content-text-color = #6B6B6B
-secondary-color = #F06E00
+content-color = #1D70B7
+content-text-color = #1D70B7
+secondary-color = lighten(#1D70B7, 20%)
 bg-top = '../images/bg_construir.png'
