Custom colors and logo for profee

--- a/assets/stylus/variables.styl
+++ b/assets/stylus/variables.styl
@@ -1,6 +1,6 @@
-default-color = #1C5083
+default-color = #0198d1
 text-color = #4B4B4B
 content-color = #8ba8c4
-content-text-color = #6B6B6B
-secondary-color = #F06E00
+content-text-color = default-color
+secondary-color = #1f3b73
 bg-top = '../images/bg_construir.png'
