--- a/assets/stylus/variables.styl
+++ b/assets/stylus/variables.styl
@@ -1,6 +1,6 @@
-default-color = #1C5083
+default-color = #ce757f
 text-color = #4B4B4B
-content-color = #8ba8c4
-content-text-color = #6B6B6B
-secondary-color = #F06E00
-bg-top = '../images/bg_construir.png'
+content-color = #bdcbb6
+content-text-color = #ce757f
+secondary-color = #bdcbb6
+// bg-top = '../images/bg_construir.png'
