Remove backgorund-image line from variables.styl

--- a/assets/stylus/variables.styl
+++ b/assets/stylus/variables.styl
@@ -3,4 +3,4 @@ text-color = #4B4B4B
 content-color = #8ba8c4
 content-text-color = #6B6B6B
 secondary-color = #b0c666
-bg-top = '../images/bg_construir.png'
+// bg-top = '../images/bg_construir.png'
