--- a/assets/stylus/variables.styl
+++ b/assets/stylus/variables.styl
@@ -2,4 +2,4 @@ default-color = #8baeb3
 text-color = #4B4B4B
 content-color = #8ba8c4
 content-text-color = #6B6B6B
-secondary-color = #39a798
+secondary-color = #fb7d90
