--- a/assets/stylus/variables.styl
+++ b/assets/stylus/variables.styl
@@ -1,6 +1,6 @@
-default-color = #1C5083
+default-color = #99ca3c
 text-color = #4B4B4B
 content-color = #8ba8c4
 content-text-color = #6B6B6B
-secondary-color = #F06E00
+secondary-color = #dde237
 bg-top = '../images/bg_construir.png'
